// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component inverted props changes class 1`] = `
.c0 {
  width: 200px;
}

.c0 path:not(#logo-dot):not(#logo-developer-text) {
  fill: #fff;
}

<div
  class="c0"
  width="200px"
>
  <div />
</div>
`;

exports[`Component matches snapshot 1`] = `
.c0 {
  width: 200px;
}

.c0 path:not(#logo-dot):not(#logo-developer-text) {
  fill: #0D326E;
}

<div
  class="c0"
  width="200px"
>
  <div />
</div>
`;
